--- a/volleyex/app/src/main/res/layout/activity_volley.xml
+++ b/volleyex/app/src/main/res/layout/activity_volley.xml
@@ -11,18 +11,37 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+  <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/label"/>
+
   <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-  <Button
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/switch_button"
-    android:text="@string/switch_button_text"
-    android:onClick="switchClick"/>
+    <Button
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:id="@+id/volley_button"
+      android:text="@string/volley_activity_button_text"
+      android:onClick="volleyActivityClick"/>
 
-  <Button
+    <Button
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:id="@+id/semi_separate_button"
+      android:text="@string/semi_separate_activity_button_text"
+      android:onClick="semiSeparateClick"/>
+
+    <Button
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:id="@+id/separate_button"
+      android:text="@string/separate_activity_activity_button_text"
+      android:onClick="separateClick"/>
+
+    <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/update_button"
