--- a/MemberImages/app/src/main/res/layout/activity_volley.xml
+++ b/MemberImages/app/src/main/res/layout/activity_volley.xml
@@ -8,7 +8,7 @@
 
   <ListView
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:id="@+id/volley_list">
   </ListView>
 
