--- a/MemberImages/app/src/main/res/layout/activity_volley.xml
+++ b/MemberImages/app/src/main/res/layout/activity_volley.xml
@@ -4,7 +4,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context="se.juneday.memberimages.SeparateActivity">
+  tools:context="se.juneday.memberimages.MemberActivity">
 
   <ListView
     android:layout_width="wrap_content"
