--- a/MemberImages/app/src/main/res/layout/member_row.xml
+++ b/MemberImages/app/src/main/res/layout/member_row.xml
@@ -3,17 +3,15 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="10dp"
-    android:id="@+id/row_layout">
+    android:id="@+id/member_row">
 
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:text="Marshmallow"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@android:color/black" />
-
 
     <TextView
         android:id="@+id/email"
@@ -21,7 +19,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/name"
         android:layout_marginTop="5dp"
-        android:text="Android 6.0"
         android:textColor="@android:color/black" />
 
     <ImageView
@@ -32,6 +29,5 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:src="@android:drawable/ic_dialog_info" />
-
 
 </RelativeLayout>
